--- a/testimonials-grid-section-main/style.css
+++ b/testimonials-grid-section-main/style.css
@@ -16,17 +16,27 @@ body{
     margin:3rem auto ;
     
 }
-img{
+.infor img:first-child{
     border-radius:50%;
     margin-right:5px;
+    width:30px;
+}
+.quote{
+    position:absolute;
+    top:0;
+    right:60px;
+    
 }
 p{
     font-size:13px;
     color:hsl(0, 0%, 81%);
     
+    
    
 }
 h3{
+    font-size:1rem;
+    font-weight:600;
     color:hsl(0, 0%, 81%)
 
 }
@@ -45,6 +55,8 @@ small{
     color:#fff;
     font-weight:600;
     margin:0.65rem 0;
+    z-index:2;
+    position:relative;
 }
 .grid-boxes{
     display:grid;
@@ -58,6 +70,8 @@ small{
 .box-1{
     grid-column:1/3;
     background-color:hsl(263, 55%, 52%);
+    position:relative;
+    
 
 }
 .box-2{
@@ -80,6 +94,11 @@ small{
     font-weight:600;
     color:#000;
 }
+
+.box-3 p:nth-child(odd),
+.box-4 p:nth-child(odd){
+    color:#777 !important;
+}
 .box-4{
     grid-row:2/3;
     background-color:hsl(0, 0%, 100%);
@@ -90,4 +109,27 @@ small{
     grid-column:2/4;
     background-color:hsl(219, 29%, 14%);
    
+}
+
+
+@media only screen and (max-width:375px){
+    .container{
+        width:90%;
+        margin:auto;
+        position:relative;
+    }
+    .grid-boxes{
+        display:block;
+        
+        
+    }
+    .grid-boxes .box{
+        margin:1rem 0;
+        
+    }
+    .box-3{
+        position:absolute;
+        bottom:-26rem;
+        margin-bottom:1rem;
+    }
 }
